# GTests

./: CMakeLists.txt
application/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
tests/: CMakeLists.txt  case1.cpp  case2.cpp  case3.cpp  main.cpp
tests/googletest/BUILDS/: CMakeCache.txt  Makefile  cmake_install.cmake
